[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/lobby/ControlPlayerLabel.gd" type="Script" id=1]

[node name="Root" type="HBoxContainer"]
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 196, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPlayerName" type="Label" parent="."]
margin_right = 150.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Player Name"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionPlayerRole" type="OptionButton" parent="."]
margin_left = 154.0
margin_right = 230.0
margin_bottom = 40.0
text = "Hider"
items = [ "Hider", null, false, 0, null, "Seeker", null, false, 1, null ]
selected = 0
[connection signal="item_selected" from="OptionPlayerRole" to="." method="_on_OptionPlayerRole_item_selected"]
